[package]
name = "WasmBench"
version = "0.1.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
edition = "2018"

[dependencies]
wasmparser = "0.63.1"
easy-hasher = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.15.0" # progress bar during processing
regex = "1.3.9"
cpp_demangle = "0.3.1"
rustc-demangle = "0.1"

[profile.release]
lto = "thin"